# MiniAxiom

./: README.md  demo_complete_system.py  demo_core_system.py  demo_llm_integration.py  demo_proof_engine.py  pyproject.toml  streamlit_app.py
src/: mathgraph.py
src/explanation/: proof_explainer.py
src/extraction/: llm_client.py  problem_extractor.py
src/formal/: expressions.py  parser.py
src/reasoning/: pattern_matching.py  proof_engine.py  rules.py
tests/: test_end_to_end.py  test_expressions.py  test_llm_integration.py  test_parser.py  test_pattern_matching.py  test_proof_engine.py  test_rules.py
